--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -28,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Adote Um Pet</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
